--- a/frontend/src/components/Lobby.css
+++ b/frontend/src/components/Lobby.css
@@ -396,3 +396,35 @@ button:nth-of-type(2) {
 button:nth-of-type(3) {
   right: 20px;
 }
+
+.chicken-display {
+  position: absolute;
+  top: 65%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+}
+
+.chicken-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 180px;
+  height: 180px;
+}
+
+.chicken-image {
+  width: 160px;
+  height: 160px;
+  object-fit: contain;
+}
+
+.chicken-status {
+  margin-top: 8px;
+  font-size: 20px;
+  color: #222;
+  text-shadow: 1px 1px 2px #fff, 0 0 2px #000;
+}
