--- a/frontend/src/components/Lobby.css
+++ b/frontend/src/components/Lobby.css
@@ -374,10 +374,10 @@
 button {
   /* position: absolute; */
   bottom: 20px;
-  padding: 12px 24px;
+ /* padding: 12px 24px;*/
   border: none;
   border-radius: 12px;
-  background: rgba(255, 255, 255, 0.8);
+  /*background: rgba(255, 255, 255, 0.8);*/
   font-size: 16px;
   font-weight: bold;
   cursor: pointer;
