--- a/frontend/src/components/Lobby.css
+++ b/frontend/src/components/Lobby.css
@@ -251,13 +251,13 @@
   margin-top: 0;
 }
 
-.shop-item {
+.lobby .shop-item {
   display: flex;
   justify-content: space-between;
   margin: 8px 0;
 }
 
-.shop-item button {
+.lobby .shop-item button {
   background: orange;
   border: none;
   padding: 4px 8px;
@@ -373,7 +373,7 @@
   object-fit: contain;
 }
 
-button {
+.lobby button {
   /* position: absolute; */
   bottom: 20px;
  /* padding: 12px 24px;*/
@@ -386,16 +386,16 @@ button {
   z-index: 2;
 }
 
-button:nth-of-type(1) {
+.lobby button:nth-of-type(1) {
   left: 20px;
 }
 
-button:nth-of-type(2) {
+.lobby button:nth-of-type(2) {
   left: 50%;
   /* transform: translateX(-50%); */
 }
 
-button:nth-of-type(3) {
+.lobby button:nth-of-type(3) {
   right: 20px;
 }
 
